# rail-horizon-oss

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .gitmodules  .pre-commit-config.yaml  AppStatusPublisher_8h_source.html  CalculationHelper_8h_source.html  CoupledLocalizationSubscriber_8h_source.html  IClock_8h_source.html  ILogger_8h_source.html  IPublisher_8h_source.html  LookupStructures_8h_source.html  MapDBReader_8h_source.html  MapGeometryTypes_8h_source.html  MapModel_8h_source.html  MarkerStructurePublisher_8h_source.html  MessageHelper_8h_source.html  MissionProfilePublisher_8h_source.html  MissionProfileSubscriber_8h_source.html  Projection_8h_source.html  PublisherWrapper_8h_source.html  README.md  ROSMessages_8h_source.html  RailHorizonNode_8h_source.html  RailHorizonParameters_8h_source.html  RailHorizonPublisher_8h_source.html  RosClock_8h_source.html  RosLogger_8h_source.html  RosPublisher_8h_source.html  StructureConverter_8h_source.html  annotated.html  classAppStatusPublisher-members.html  classAppStatusPublisher.html  classAppStatusPublisher__coll__graph.dot  classCoupledLocalizationSubscriber-members.html  classCoupledLocalizationSubscriber.html  classGeometryTransformation-members.html  classGeometryTransformation.html  classIClock-members.html  (+146 more)
.github/workflows/: documentation.yml  main.yml
LICENSES/: .license_header.txt  .license_header_cc0.txt
cmake/: Dependencies.cmake  DeveloperSetup.cmake  FindProj.cmake
docs/: Doxyfile.in
docs/images/: rviz_RH.png.license
scripts/: runLocalization.sh  runMP.sh  runRH.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enums_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+35 more)
src/dsd_map_service_ros_wrapper/: CMakeLists.txt  package.xml
src/dsd_rail_horizon/: CMakeLists.txt  package.xml  publish_rh_tf.sh
src/dsd_rail_horizon/config/: parameters.yaml
src/dsd_rail_horizon/docs/: CMakeLists.txt  Doxyfile.in
src/dsd_rail_horizon/include/dsd_rail_horizon/: RailHorizonNode.h  RailHorizonParameters.h
src/dsd_rail_horizon/include/dsd_rail_horizon/interfaces/: IClock.h  IPublisher.h
src/dsd_rail_horizon/include/dsd_rail_horizon/interfaces/implementations/: RosClock.h  RosLogger.h  RosPublisher.h
src/dsd_rail_horizon/include/dsd_rail_horizon/publisher/: AppStatusPublisher.h  MarkerStructurePublisher.h  RailHorizonPublisher.h
src/dsd_rail_horizon/include/dsd_rail_horizon/subscriber/: CoupledLocalizationSubscriber.h  MissionProfileSubscriber.h
src/dsd_rail_horizon/include/dsd_rail_horizon/utils/: CalculationHelper.h  MessageHelper.h  StructureConverter.h
src/dsd_rail_horizon/launch/: launch.py
src/dsd_rail_horizon/src/: RailHorizonMain.cpp  RailHorizonNode.cpp  RailHorizonParameters.cpp
src/dsd_rail_horizon/src/publisher/: AppStatusPublisher.cpp  MarkerStructurePublisher.cpp  RailHorizonPublisher.cpp
src/dsd_rail_horizon/src/subscriber/: CoupledLocalizationSubscriber.cpp  MissionProfileSubscriber.cpp
src/dsd_rail_horizon/tests/: CMakeLists.txt
src/dsd_rail_horizon/tests/integration_tests/: .gitignore  AppStatusPublisherTests.py  CMakeLists.txt
src/dsd_rail_horizon/tests/integration_tests/helper/:  __init__.py  TestSubscriber.py
src/dsd_rail_horizon/tests/unit_tests/: CMakeLists.txt
src/dsd_rail_horizon/tests/unit_tests/tests/: RailHorizonNodeTests.cpp
src/dsd_rail_horizon/tests/unit_tests/tests/interfaces/implementations/: RosClockTests.cpp  RosLoggerTests.cpp  RosPublisherTests.cpp
src/dsd_rail_horizon/tests/unit_tests/tests/publisher/: AppStatusPublisherTests.cpp  MarkerStructurePublisherTests.cpp  RailHorizonPublisherTests.cpp
src/dsd_rail_horizon/tests/unit_tests/tests/subscriber/: CoupledLocalizationSubscriberTests.cpp  MissionProfileSubscriberTests.cpp
src/dsd_rail_horizon/tests/unit_tests/tests/utils/: CalculationHelperTests.cpp  MessageHelperTests.cpp
src/dsd_rail_horizon/tests/unit_tests/utils/: CustomMatcher.h  CustomPrintDefinitions.h  TestSubscriber.h
src/dsd_rail_horizon/tests/unit_tests/utils/data/: StructureData.h
src/dsd_rail_horizon/tests/unit_tests/utils/mocks/: ClockMock.h  LoggerMock.h  PublisherMock.h
src/dsd_rail_horizon_core/: CMakeLists.txt  package.xml
src/dsd_rail_horizon_core/cmake/configs/: dsd_rail_horizon_coreConfigExtra.cmake
src/dsd_rail_horizon_core/include/dsd_rail_horizon_core/: LookupStructures.h  MapDBReader.h  MapGeometryTypes.h  MapModel.h  Projection.h
src/dsd_rail_horizon_core/include/dsd_rail_horizon_core/interfaces/: ILogger.h
src/dsd_rail_horizon_core/src/: MapDBReader.cpp  Projection.cpp
src/dsd_rail_horizon_core/tests/: CMakeLists.txt  MapDBReaderTest.cpp  ProjectionTests.cpp
src/dsd_rail_horizon_core/tests/utils/: GTestPrettyPrint.h  LoggerMock.h  LookupStructureHelper.h
tools/: generate_iwyu_mappings.py  iwyu_precommit.py
