<?xml version="1.0"?>
<!--
 ~ SPDX-FileCopyrightText: Copyright DB Netz AG
 ~ SPDX-License-Identifier: CC0-1.0
 -->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dsd_rail_horizon_core</name>
  <version>1.0.0</version>
  <description>Requests map data from dbs_map_onboard_api and converts it into Rail Horizon map model</description>
  <maintainer email="noreply@deutschebahn.com">DB Netz AG</maintainer>
  <license>Apache 2.0, CC0-1.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>dsd_common_types</depend>
  <depend>dsd_map_service_ros_wrapper</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
